--- a/frontend/src/contact.css
+++ b/frontend/src/contact.css
@@ -2,8 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin : 10px ;
-  
+  margin: 10px;
 }
 .cube {
   height: 50px;
@@ -28,18 +27,18 @@
 }
 
 input,
-textarea, .subButton {
+textarea,
+.subButton {
   font-family: "Open Sans", sans-serif;
   margin: 4px;
-  
 }
 
 .textarea {
-    resize: none;
-    height: 100px;
+  resize: none;
+  height: 100px;
 }
-.subButton{
-    width: 75px;
-    height: 24px;
-    align-self: center;
+.subButton {
+  width: 75px;
+  height: 24px;
+  align-self: center;
 }
