--- a/frontend/src/components/inscription/inscription.css
+++ b/frontend/src/components/inscription/inscription.css
@@ -137,11 +137,11 @@ label {
   }
 }
 
-input {
+.inputInscription {
   border: solid 1px;
   border-radius: 40px;
 }
-.textarea {
+#description {
   border: 5px double #391ca4;
   border-radius: 0px 40px 0px 40px;
 }
@@ -163,12 +163,12 @@ input {
     height: 380px;
     width: 300px;
   }
-  input {
+  .inputInscription {
     height: 20px;
     width: 250px;
     padding: 5%;
   }
-  input:hover {
+  .inputInscription:hover {
     transition-duration: 0.3s;
     background-color: coral;
   }
