modif className composant contact

--- a/frontend/src/components/contact/contact.css
+++ b/frontend/src/components/contact/contact.css
@@ -26,9 +26,9 @@
   flex-direction: column;
 }
 
-input,
-textarea,
-.subButton {
+.inputContact,
+.textareaContact,
+.buttonContact {
   font-family: "Open Sans", sans-serif;
   margin: 4px;
 }
