--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,11 +8,26 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   /* background-image: url(C:\Users\9606369F\Desktop\project2\creation-projet\src\img\arriéreplan.png);*/
-
+animation: color-change-4x 6s linear infinite alternate both;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
+
+@keyframes color-change-4x {
+  0% {
+    background: rgb(0, 0, 111);
+  }
+  33.3333% {
+    background: rgb(38, 0, 84);
+  }
+  66.666% {
+    background: rgb(220, 97, 4);
+  }
+  100% {
+    background: rgb(155, 0, 104);
+  }
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
