--- a/frontend/src/pages/evenement/event.css
+++ b/frontend/src/pages/evenement/event.css
@@ -5,6 +5,7 @@
   padding: 4%;
   display: flex;
   align-items: center;
+  width: 100%;
 }
 .gif{
   width: 40px;
@@ -93,7 +94,7 @@
 
 .searchevent {
   height: 20px;
-  width: 95%;
+  width: 100%;
   border: solid 2px black;
   border-radius: 5px;
   background-color: white;
@@ -192,7 +193,6 @@
 @media (min-width: 390px) {
   .search-resultsevent {
     margin: 3%;
-    margin-top: 10%;
   }
   .contenueevent {
     margin-top: 5%;
@@ -214,14 +214,20 @@
 }
 
 @media (min-width: 915px) {
+.event{
+  width: 800px;
+}
+.searchevent{
+  width: 720px;
+}
   .remplissage {
     margin-top: 0%;
     display: flex;
     justify-content: space-around;
   }
   .searchevent {
-    height: 20px;
-    width: 400px;
+    height: 30px;
+    
     border: solid 2px black;
     border-radius: 5px;
   }
