--- a/frontend/src/pages/accueil/Accueil.css
+++ b/frontend/src/pages/accueil/Accueil.css
@@ -49,6 +49,8 @@ footer {
 .container-fluid {
   height: 100%;
   width: 100%;
+  display: flex;
+  flex-direction: column;
   transform: rotate(-45deg);
 }
 
