--- a/frontend/src/components/EventQuard.css
+++ b/frontend/src/components/EventQuard.css
@@ -1,6 +1,9 @@
-.description {
-  z-index: 1;
-  margin: 2%;
+.EventQuard {
+ border-radius: 10px;
+ margin-top: 10%;
+ margin-left: 5%;
+ margin-right: 5%;
+ margin-bottom: 5%;
   padding: 5%;
   background-color: cornsilk;
   animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
@@ -35,6 +38,19 @@ p {
     opacity: 1;
   }
 }
+.btnback{
+  text-decoration: none;
+  color: black;
+  background-color: coral;
+  border-radius: 0px 20px 20px 20px;
+  font-size: xx-small;
+ padding: 2%;
+ margin-top: 10%;
+}
+.back:hover{
+transform: rotate(-45deg);
+}
+
 .btnbillet {
   background-color: darkorange;
   border-radius: 20px;
@@ -48,9 +64,30 @@ p {
   align-items: center;
   margin-top: 10px;
 }
+
+.btnbillet:hover{
+  animation: color-change 1s linear infinite alternate both;
+}
+
+@keyframes color-change {
+  0% {
+    background: rgb(0, 0, 111);
+  }
+  33.3333% {
+    background: rgb(0, 181, 21);
+  }
+  66.666% {
+    background: rgb(220, 97, 4);
+  }
+  100% {
+    background: rgb(155, 0, 104);
+  }
+}
 .picture {
-  width: 90%;
-  margin-top: 5%;
+  width: 50%;
+  margin-top: -10%;
+  border-radius: 10px;
+  box-shadow: 0px 0px 18px 14px rgba(0,0,0,0.88);
 }
 h3 {
   margin-top: 5%;
@@ -59,10 +96,7 @@ h3 {
 .carteevent {
   height: 325px;
   width: 325px;
-  
-  
   margin-top: 5%;
-  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -76,67 +110,31 @@ h3 {
   border-radius: 100%;
   box-shadow: 0px 0px 227px -66px rgba(0, 0, 0, 0.87) inset;
 }
-.navigationevent {
-  margin-top: 5%;
-  height: 325px;
-  width: 50px;
-  background-color: rgba(198, 132, 9, 0);
-  box-shadow: 0px 0px 227px -66px rgba(198, 132, 9, 0.436) inset;
-  border: thick double;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  border-radius: 5px;
-}
-@media (min-width: 390px) {
-  .navigationevent {
-    height: 350px;
-    width: 350px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .navigation {
-    height: 50px;
-    width: 350px;
-    margin-top: 0%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-  }
+@media (min-width: 390px) {
+
+
 }
 @media (min-width: 700px) {
   .carteevent {
     height: 550px;
     width: 550px;
-
     display: flex;
     justify-content: center;
     align-items: center;
   }
-  .navigationevent {
-    height: 550px;
-    width: 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 5%;
+  .searchevent {
+    height: 40px;
+    width: 90%;
   }
+  
 }
 @media (min-width: 915px) {
-  .carteevent {
-    height: 450px;
-    width: 450px;
-  }
 
-  .navigationevent {
-    height: 450px;
-    width: 50px;
-  }
+.remplissage{
+  flex-direction: column;
+}
+
 }
 @media (min-width: 1200px) {
   .carteevent {
@@ -144,10 +142,6 @@ h3 {
     width: 550px;
   }
 
-  .navigationevent {
-    height: 450px;
-    width: 50px;
-  }
 }
 
 @media (min-width: 1400px) {
@@ -156,8 +150,4 @@ h3 {
     width: 650px;
   }
 
-  .navigationevent {
-    height: 650px;
-    width: 50px;
-  }
 }
