--- a/frontend/src/pages/accueil/Accueil.css
+++ b/frontend/src/pages/accueil/Accueil.css
@@ -1,4 +1,3 @@
-
 footer {
   display: flex;
   justify-content: center;
@@ -41,12 +40,15 @@ footer {
   color: rgb(191, 161, 13);
   font-family: Brush Script MT;
   font-size: 50px;
+  margin-top: 20px;
 }
 
 .container-fluid {
   height: 100%;
   width: 100%;
   transform: rotate(-45deg);
+  display: flex;
+  flex-direction: column;
 }
 
 /*animation pour le battement du logo*/
