--- a/frontend/src/components/EventQuard.css
+++ b/frontend/src/components/EventQuard.css
@@ -1,61 +1,66 @@
-.EventQuard{
-display: flex;
-flex-direction: column;
-justify-content: center;
+.EventQuard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-.description{
+.description {
   padding: 5%;
 }
-h1{margin-top: 5%;
-    font-size: x-small;text-align: center;
+h1 {
+  margin-top: 5%;
+  font-size: x-small;
+  text-align: center;
 }
-h2{margin-top: 5%;
-    font-size: xx-small;}
-p{
-    margin-top: 5%;  font-size: 50%;
+h2 {
+  margin-top: 5%;
+  font-size: xx-small;
 }
-.picture{
-    width: 90%;
-    margin-top: 5%;
+p {
+  margin-top: 5%;
+  font-size: 50%;
 }
-h3{margin-top: 5%;
-    font-size: 50%;
+.picture {
+  width: 90%;
+  margin-top: 5%;
+}
+h3 {
+  margin-top: 5%;
+  font-size: 50%;
 }
 .carteevent {
-    height: 325px;
-    width: 325px;
-    background-color: rgba(201, 126, 35, 0.484);
-    box-shadow: 0px 0px 227px -66px rgba(62, 84, 196, 0.87) inset;
-    margin-top: 5%;
-    border: thick double; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
-  }
-  
-  .mapevent {
-    height: 95%;
-    width: 95%;
-    background-color: white;
-    border-radius: 100%;
-    box-shadow: 0px 0px 227px -66px rgba(0, 0, 0, 0.87) inset;
-  }
-  .navigationevent {
-    margin-top: 5%;
-    height: 325px;
-    width: 50px;
-     background-color: rgba(198, 132, 9, 0); 
-    box-shadow: 0px 0px 227px -66px rgba(198, 132, 9, 0.436) inset;
-     border: thick double; 
-   display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    border-radius: 5px;
-  } 
-  @media (min-width: 390px) {
+  height: 325px;
+  width: 325px;
+  background-color: rgba(201, 126, 35, 0.484);
+  box-shadow: 0px 0px 227px -66px rgba(62, 84, 196, 0.87) inset;
+  margin-top: 5%;
+  border: thick double;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+}
 
+.mapevent {
+  height: 95%;
+  width: 95%;
+  background-color: white;
+  border-radius: 100%;
+  box-shadow: 0px 0px 227px -66px rgba(0, 0, 0, 0.87) inset;
+}
+.navigationevent {
+  margin-top: 5%;
+  height: 325px;
+  width: 50px;
+  background-color: rgba(198, 132, 9, 0);
+  box-shadow: 0px 0px 227px -66px rgba(198, 132, 9, 0.436) inset;
+  border: thick double;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 5px;
+}
+@media (min-width: 390px) {
   .navigationevent {
     height: 350px;
     width: 350px;
@@ -75,59 +80,55 @@ h3{margin-top: 5%;
   }
 }
 @media (min-width: 700px) {
+  .carteevent {
+    height: 550px;
+    width: 550px;
 
-    .carteevent {
-      height: 550px;
-      width: 550px;
-  
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .navigationevent {
-      height: 550px;
-      width: 50px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-evenly;
-      align-items: center;
-      margin-top: 5%;
-    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  @media (min-width: 915px) {
+  .navigationevent {
+    height: 550px;
+    width: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 5%;
+  }
+}
+@media (min-width: 915px) {
+  .carteevent {
+    height: 450px;
+    width: 450px;
+  }
 
-    .carteevent {
-      height: 450px;
-      width: 450px;
-    }
-  
-    .navigationevent {
-      height: 450px;
-      width: 50px;
-    }
+  .navigationevent {
+    height: 450px;
+    width: 50px;
   }
-  @media (min-width: 1200px) {
-    .carteevent {
-       height: 550px;
-       width: 550px;
-     }
-   
-     .navigationevent {
-       height: 450px;
-       width: 50px;
-     }
-   }
-   
-   @media (min-width: 1400px) {
-    
-     .carteevent {
-       height: 650px;
-       width: 650px;
-     }
-   
-     .navigationevent {
-       height: 650px;
-       width: 50px;
- }
-   }
-   
+}
+@media (min-width: 1200px) {
+  .carteevent {
+    height: 550px;
+    width: 550px;
+  }
+
+  .navigationevent {
+    height: 450px;
+    width: 50px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .carteevent {
+    height: 650px;
+    width: 650px;
+  }
+
+  .navigationevent {
+    height: 650px;
+    width: 50px;
+  }
+}
