--- a/frontend/src/pages/inscription/inscription.css
+++ b/frontend/src/pages/inscription/inscription.css
@@ -12,7 +12,6 @@ form {
   background-color: #1556e2;
   padding: 5px;
   box-shadow: inset 0px 0px 13px 1px rgba(0, 0, 0, 0.89);
- 
 }
 @keyframes flicker-in-1 {
   0% {
@@ -123,8 +122,6 @@ label {
   flex-direction: column;
   margin: 5px;
   font-size: medium;
-  
-
 }
 .case2 {
   display: flex;
@@ -133,9 +130,10 @@ label {
   margin-bottom: 50px;
 }
 
-.case, .case2,  .formulaire {
-animation: fade-in-fwd 1s cubic-bezier(0.39, 0.575, 0.565, 1) 1s both;
-
+.case,
+.case2,
+.formulaire {
+  animation: fade-in-fwd 1s cubic-bezier(0.39, 0.575, 0.565, 1) 1s both;
 }
 
 .btn {
@@ -143,18 +141,18 @@ animation: fade-in-fwd 1s cubic-bezier(0.39, 0.575, 0.565, 1) 1s both;
   height: 24px;
   align-self: center;
   box-shadow: 3px 4px 0px 0px #899599;
-	background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
-	background-color:#ededed;
-	border-radius:15px;
-	border:1px solid #d6bcd6;
-	display:inline-block;
-	cursor:pointer;
-	color:#3a8a9e;
-	font-family:Arial;
-	font-size:13px;
-	padding:5px 15px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #e1e2ed;
+  background: linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
+  background-color: #ededed;
+  border-radius: 15px;
+  border: 1px solid #d6bcd6;
+  display: inline-block;
+  cursor: pointer;
+  color: #3a8a9e;
+  font-family: Arial;
+  font-size: 13px;
+  padding: 5px 15px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #e1e2ed;
 }
 
 @keyframes fade-in-fwd {
@@ -175,7 +173,6 @@ animation: fade-in-fwd 1s cubic-bezier(0.39, 0.575, 0.565, 1) 1s both;
   border-radius: 40px;
 }
 #description {
-
   border: 5px double #391ca4;
   border-radius: 0px 15px 0px 15px;
   width: 90%;
@@ -208,5 +205,4 @@ animation: fade-in-fwd 1s cubic-bezier(0.39, 0.575, 0.565, 1) 1s both;
     transition-duration: 0.3s;
     background-color: coral;
   }
-
 }
