--- a/frontend/src/components/EventQuard.css
+++ b/frontend/src/components/EventQuard.css
@@ -1,6 +1,8 @@
+.name{color: rgb(255, 255, 255);}
+
 .EventQuard {
  border-radius: 10px;
- margin-top: 10%;
+ margin-top: 5%;
  margin-left: 5%;
  margin-right: 5%;
  margin-bottom: 5%;
@@ -38,17 +40,26 @@ p {
     opacity: 1;
   }
 }
-.btnback{
-  text-decoration: none;
-  color: black;
+.bouton{
   background-color: coral;
   border-radius: 0px 20px 20px 20px;
-  font-size: xx-small;
- padding: 2%;
- margin-top: 10%;
+font-size: xx-small;
+ margin-top: 10px;
+ margin-left: 10px;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ height: 40px;
+ width: 40px;
+ transition-duration: 1s;
 }
-.back:hover{
+.btnback{
+  color: black;; text-decoration: none;
+}
+.bouton:hover{
 transform: rotate(-45deg);
+background-color: red;
 }
 
 .btnbillet {
@@ -108,9 +119,35 @@ h3 {
   width: 95%;
   background-color: white;
   border-radius: 100%;
+  
   box-shadow: 0px 0px 227px -66px rgba(0, 0, 0, 0.87) inset;
 }
+.logo1 {
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  border: solid 2px black;
+  
+  animation: bounce-in-left 1.1s 2.5s both;
+}
 
+.logo2 {
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  border: solid 2px black;
+ 
+  animation: bounce-in-left 1.1s 2s both;
+}
+
+.logo3 {
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+  border: solid 2px black;
+  
+  animation: bounce-in-left 1.1s 1.5s both;
+}
 @media (min-width: 390px) {
 
 
