--- a/frontend/src/components/EventQuard.css
+++ b/frontend/src/components/EventQuard.css
@@ -1,11 +1,18 @@
-.name{color: rgb(255, 255, 255);}
+.name {
+  color: rgb(255, 255, 255);
+  font-size: 40px;
+}
 
+.remplissage {
+  display: flex;
+  flex-direction: column;
+}
 .EventQuard {
- border-radius: 10px;
- margin-top: 5%;
- margin-left: 5%;
- margin-right: 5%;
- margin-bottom: 5%;
+  border-radius: 10px;
+  margin-top: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 5%;
   padding: 5%;
   background-color: cornsilk;
   animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
@@ -14,18 +21,18 @@
   align-items: center;
   justify-content: center;
 }
-h1 {
+.titreeventcard {
   margin-top: 5%;
   font-size: large;
   text-align: center;
 }
-h2 {
+.ou {
   margin-top: 5%;
-  font-size: xx-small;
+  font-size: 15px;
 }
-p {
+.paragraph {
   margin-top: 5%;
-  font-size: 50%;
+  font-size: 15px;
   animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
 @keyframes text-focus-in {
@@ -40,26 +47,27 @@ p {
     opacity: 1;
   }
 }
-.bouton{
+.bouton {
   background-color: coral;
   border-radius: 0px 20px 20px 20px;
-font-size: xx-small;
- margin-top: 10px;
- margin-left: 10px;
- display: flex;
- flex-direction: column;
- justify-content: center;
- align-items: center;
- height: 40px;
- width: 40px;
- transition-duration: 1s;
+  font-size: xx-small;
+  margin-top: 10px;
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  width: 40px;
+  transition-duration: 1s;
 }
-.btnback{
-  color: black;; text-decoration: none;
+.btnback {
+  color: black;
+  text-decoration: none;
 }
-.bouton:hover{
-transform: rotate(-45deg);
-background-color: red;
+.bouton:hover {
+  transform: rotate(-45deg);
+  background-color: red;
 }
 
 .btnbillet {
@@ -76,7 +84,7 @@ background-color: red;
   margin-top: 10px;
 }
 
-.btnbillet:hover{
+.btnbillet:hover {
   animation: color-change 1s linear infinite alternate both;
 }
 
@@ -98,11 +106,12 @@ background-color: red;
   width: 50%;
   margin-top: -10%;
   border-radius: 10px;
-  box-shadow: 0px 0px 18px 14px rgba(0,0,0,0.88);
+  box-shadow: 0px 0px 18px 14px rgba(0, 0, 0, 0.88);
 }
-h3 {
+.prixevent {
   margin-top: 5%;
-  font-size: 50%;
+  font-size: 15px;
+  color: rgba(0, 0, 0, 0.87);
 }
 .carteevent {
   height: 325px;
@@ -119,7 +128,7 @@ h3 {
   width: 95%;
   background-color: white;
   border-radius: 100%;
-  
+
   box-shadow: 0px 0px 227px -66px rgba(0, 0, 0, 0.87) inset;
 }
 .logo1 {
@@ -127,7 +136,7 @@ h3 {
   width: 40px;
   border-radius: 100%;
   border: solid 2px black;
-  
+
   animation: bounce-in-left 1.1s 2.5s both;
 }
 
@@ -136,7 +145,7 @@ h3 {
   width: 40px;
   border-radius: 100%;
   border: solid 2px black;
- 
+
   animation: bounce-in-left 1.1s 2s both;
 }
 
@@ -145,12 +154,13 @@ h3 {
   width: 40px;
   border-radius: 100%;
   border: solid 2px black;
-  
+
   animation: bounce-in-left 1.1s 1.5s both;
 }
-@media (min-width: 390px) {
-
-
+@media (min-width: 360px) {
+  .name {
+    font-size: 20px;
+  }
 }
 @media (min-width: 700px) {
   .carteevent {
@@ -164,21 +174,25 @@ h3 {
     height: 40px;
     width: 90%;
   }
-  
+  .btnbillet {
+    font-size: 15px;
+  }
 }
+
+.paragraph {
+  font-size: 15px;
+}
+
 @media (min-width: 915px) {
-
-.remplissage{
-  flex-direction: column;
-}
-
+  .remplissage {
+    flex-direction: column;
+  }
 }
 @media (min-width: 1200px) {
   .carteevent {
     height: 550px;
     width: 550px;
   }
-
 }
 
 @media (min-width: 1400px) {
@@ -186,5 +200,4 @@ h3 {
     height: 650px;
     width: 650px;
   }
-
 }
