--- a/frontend/src/components/MyEventCard.css
+++ b/frontend/src/components/MyEventCard.css
@@ -1,4 +1,4 @@
-.EventQuard{
+/* .EventQuard{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -6,18 +6,14 @@
     .description{
       padding: 5%;
     }
-    h1{margin-top: 5%;
-        font-size: x-small;text-align: center;
-    }
+
+    
     h2{margin-top: 5%;
         font-size: xx-small;}
     p{
         margin-top: 5%;  font-size: 50%;
     }
-    .picture{
-        width: 90%;
-        margin-top: 5%;
-    }
+
     h3{margin-top: 5%;
         font-size: 50%;
     }
@@ -130,4 +126,4 @@
            width: 50px;
      }
        }
-       
+        */
