--- a/frontend/src/pages/evenement/event.css
+++ b/frontend/src/pages/evenement/event.css
@@ -1,5 +1,17 @@
+.titreevent {
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  margin-top: 30px;
+  font-size: 3.9em;
+}
+.organise{
+  font-size:20px;
+  color:white;
+}
+
 .event-containerevent {
-  margin-top: 2%;
+  
   padding: 4%;
   display: flex;
   align-items: center;
@@ -56,7 +68,7 @@
 
 .search-resultsevent {
   
-  margin-top: 5%;
+  margin-top: 10px;
   height: 95%;
   border-radius: 5%;
   animation: bounce-in-left 1.1s 0.9s both;
@@ -177,7 +189,15 @@
 }
 
 
-@media (min-width: 390px) {
+@media (min-width: 360px) {
+
+  .logo{
+    width: 100px;
+    height: 100px;
+  }
+  .titreevent{
+    font-size: 2.5em;
+  }
   .search-resultsevent {
     margin: 3%;
   }
@@ -190,6 +210,10 @@
 }
 
 @media (min-width: 700px) {
+
+ .titreevent{
+    font-size: 5em;
+  }
   .contenueevent {
     margin-top: 5%;
     display: flex;
